GC修改